[package]
name = "cycle-tracker-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
deadpool-postgres = "0.10.3"
postgres = "0.19"
tokio = { version = "1.22.0", features = ["full"] }
tokio-postgres = "0.7.7"
tokio-postgres-migration = "0.1.0"
